# fastwindow

./: .Rbuildignore  .gitignore  CHANGELOG.md  DESCRIPTION  LICENSE  LICENSE.md  MANIFEST.in  NAMESPACE  NEWS.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
R/: RcppExports.R  fastroll-package.R  fastroll.R
docs/: api.rst  benchmarks.md  conf.py  index.rst  requirements.txt
fastwindow/: __init__.py  __init__.pyi
man/: expanding_mean.Rd  expanding_quantile_approx.Rd  expanding_regression.Rd  expanding_std.Rd  expanding_sum.Rd  expanding_var.Rd  fastroll-package.Rd  get_num_threads.Rd  has_avx2.Rd  rolling_corr.Rd  rolling_corr_matrix.Rd  rolling_corr_pairs.Rd  rolling_cov.Rd  rolling_kurt.Rd  rolling_max.Rd  rolling_max_matrix.Rd  rolling_mean.Rd  rolling_mean_matrix.Rd  rolling_min.Rd  rolling_min_matrix.Rd  rolling_multiple_regression.Rd  rolling_quantile.Rd  rolling_regression.Rd  rolling_regression_xy.Rd  rolling_skew.Rd  rolling_spearman.Rd  rolling_std.Rd  rolling_std_matrix.Rd  rolling_sum.Rd  rolling_sum_matrix.Rd  rolling_var.Rd  rolling_zscore.Rd  set_num_threads.Rd
src/: Makevars  RcppExports.cpp  bindings_python.cpp  bindings_r.cpp  cpu_features.cpp  expanding.cpp  fastwindow.h  rolling_basic.cpp  rolling_corr.cpp  rolling_corr_matrix.cpp  rolling_matrix.cpp  rolling_moments.cpp  rolling_quantile.cpp  rolling_regression.cpp  rolling_regression_multi.cpp  rolling_spearman.cpp  simd_scan.h
tests/: test_2d.py  test_basic.py  test_corr.py  test_corr_matrix.py  test_expanding.py  test_moments.py  test_out_param.py  test_pandas_objects.py  test_quantile.py  test_regression.py  test_regression_multi.py  test_spearman.py  testthat.R
tests/testthat/: test-basic.R  test-corr.R  test-expanding.R  test-moments.R  test-quantile.R  test-regression.R
