[build-system]
requires = [
    "setuptools>=68",
    "pybind11>=2.11",
    "numpy>=1.26",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastwindow"
description = "High-performance rolling window statistics (C++17 + pybind11)"
authors = [{name = "bagol1000"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fastwindow.__version__"}
